--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,16 @@
     <link rel="stylesheet" href="./style/main.css" />
   </head>
   <body>
-    <header class="header">헤더</header>
+    <header class="header">
+      <!-- 로고  -->
+      <h1 class="heading">
+        <a href="/" class="logo"
+          ><img src="./images/logo.png" alt="웹카페"
+        /></a>
+      </h1>
+      <!-- 텍스트 링크 모음 -->
+      <!-- 메인메뉴 -->
+    </header>
     <div class="visual">비주얼</div>
     <main class="main">
       <div class="group1 group">메인 콘텐츠1</div>
