border-radius와 position 속성 중 relative와 absolute 다루기

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
   <body>
     <header class="header">
       <!-- 로고  -->
-      <h1 class="heading">
-        <a href="/" class="logo"
+      <h1 class="logo">
+        <a href="/" class="logo-link"
           ><img src="./images/logo.png" alt="웹카페"
         /></a>
       </h1>
